WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
101943
GraphicsSurfaceGLX does not handle transparency correctly.
https://bugs.webkit.org/show_bug.cgi?id=101943
Summary
GraphicsSurfaceGLX does not handle transparency correctly.
Zeno Albisser
Reported
2012-11-12 09:08:28 PST
GraphicsSurfaceGLX does not handle transparency correctly.
Attachments
Patch
(6.81 KB, patch)
2012-11-12 09:18 PST
,
Zeno Albisser
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zeno Albisser
Comment 1
2012-11-12 09:18:56 PST
Created
attachment 173657
[details]
Patch
Zeno Albisser
Comment 2
2012-11-12 10:37:33 PST
Comment on
attachment 173657
[details]
Patch Clearing flags on attachment: 173657 Committed
r134255
: <
http://trac.webkit.org/changeset/134255
>
Zeno Albisser
Comment 3
2012-11-12 10:37:39 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug