GraphicsSurfaceGLX does not handle transparency correctly. https://bugs.webkit.org/show_bug.cgi?id=101943

GraphicsSurfacGLX must consistently use RGBA texture format.
glXCreateWindow must be called after creating the XWindow
that serves as a temporary offscreen texture storage, in order
to allow for transparency.
When creating the offscreen XWindow we must make sure,
that we use a framebuffer configuration that supports
an alpha mask.

Reviewed by Noam Rosenthal.

* platform/graphics/surfaces/qt/GraphicsSurfaceGLX.cpp:
(WebCore):
(WebCore::GraphicsSurfacePrivate::GraphicsSurfacePrivate):
(WebCore::GraphicsSurfacePrivate::~GraphicsSurfacePrivate):
(WebCore::GraphicsSurfacePrivate::createSurface):
(GraphicsSurfacePrivate):
(WebCore::GraphicsSurface::platformPaintToTextureMapper):

Canonical link: https://commits.webkit.org/120024@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@134255 268f45cc-cd09-0410-ab3c-d52691b4dbfc